tweaked will high's job title

--- a/people/index.html
+++ b/people/index.html
@@ -1,7 +1,6 @@
 ---
-published: "true"
+published: true
 layout: default
-
 ---
 
 <div class="container">
@@ -376,7 +375,7 @@ layout: default
     <div class="span4">
       <img src="/img/people/high.jpg" alt="Will High">
       <h6>Will High</h6>
-      <p>Former data scientist at Thoughtworks, astrophysicist</p>
+      <p>Data scientist at Sociocast, former astrophysicist</p>
       <div class="icons">
         <a href="https://twitter.com/fwhigh"><i class="ss-twitter"></i></a>
         <a href="https://github.com/fwhigh"><i class="ss-octocat"></i></a>
@@ -398,7 +397,7 @@ layout: default
       <div class="icons">
         <a href="http://www.twitter.com/qethanm"><i class="ss-twitter"></i></a>
       </div>
-    </div>
+    </div
       <div class="span4">
       <img src="/img/people/nestorov.jpg" alt="Michelangelo D'Agostino">
       <h6>Svetlozar Nestorov</h6>
