--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 
 <div class="container">
@@ -19,12 +20,6 @@ layout: default
   </p>
 
   <br>
-  <div class="alert alert-success">
-    <h6>
-      We're not quite ready to announce all partners and projects. We'll be adding more in the next few days.
-      <strong>Check back for more!</strong>
-    </h6>
-  </div>
 
   <!-- Iterate through projects and display info -->
   {% for post in site.posts %}
@@ -75,4 +70,3 @@ layout: default
   {% endfor %}
 
 </div>
-
