added divvy and cdot logos to homepage

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@ layout: default
       </a>
     </div>
     <div class="span3">
+      <a href="http://www.cityofchicago.org/city/en/depts/cdot.html">
+          <img id="cdot-logo" src="/img/partners/cdot.jpg">
+      </a>
+    </div>
+    <div class="span3">
+      <a href="http://www.divvybikes.com/">
+          <img id="divvy-logo" src="/img/partners/divvy.jpg">
+      </a>
+    </div>
+    <div class="span3">
       <a href="http://www.cookcountylandbank.org/">
         <img id="landbank-logo" src="/img/partners/landbank.jpg">
       </a>
@@ -108,6 +118,16 @@ layout: default
     <div class="span3">
       <a href="http://www.housingstudies.org/">
         <img id="ihs-logo" src="/img/partners/ihs.png">
+      </a>
+    </div>
+    <div class="span3">
+      <a href="http://ushahidi.com/">
+        <img id="ushahidi-logo" src="/img/partners/ushahidi.png">
+      </a>
+    </div>
+    <div class="span3">
+      <a href="http://qcri.org.qa/">
+        <img id="qcri-logo" src="/img/partners/qcri.png">
       </a>
     </div>
     <div class="span3">
@@ -121,16 +141,6 @@ layout: default
       </a>
     </div>
     <div class="span3">
-      <a href="http://www.chapinhall.org">
-        <img id="chapin-logo" src="/img/partners/chapin.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://crimelab.uchicago.edu">
-        <img id="crimelab-logo" src="/img/partners/crimelab.jpg">
-      </a>
-    </div>
-    <div class="span3">
       <a href="http://www.northshore.org/">
         <img id="northshore-logo" src="/img/partners/northshore.jpg">
       </a>
@@ -141,13 +151,13 @@ layout: default
       </a>
     </div>
     <div class="span3">
-      <a href="http://ushahidi.com/">
-        <img id="ushahidi-logo" src="/img/partners/ushahidi.png">
+      <a href="http://www.chapinhall.org">
+        <img id="chapin-logo" src="/img/partners/chapin.jpg">
       </a>
     </div>
     <div class="span3">
-      <a href="http://qcri.org.qa/">
-        <img id="qcri-logo" src="/img/partners/qcri.png">
+      <a href="http://crimelab.uchicago.edu">
+        <img id="crimelab-logo" src="/img/partners/crimelab.jpg">
       </a>
     </div>
     <div class="span3">    
