added sheriff logo to homepage

--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ layout: default
       </a>
     </div>
     <div class="span3">
+      <a href="http://www.cookcountysheriff.com/">
+        <img id="sheriff-logo" src="/img/partners/sheriff.jpg">
+      </a>
+    </div>
+    <div class="span3">
       <a href="http://www.chapinhall.org">
         <img id="chapin-logo" src="/img/partners/chapin.jpg">
       </a>
