--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ layout: default
     </div>
     <div class="span3">
       <a href="http://www.cookcountysheriff.com/">
-        <img id="sheriff-logo" src="/img/partners/sheriff.jpg">
+        <img id="sheriff-logo" src="/img/partners/sheriff.png">
       </a>
     </div>
     <div class="span3">
