--- a/contact/index.html
+++ b/contact/index.html
@@ -5,12 +5,13 @@ layout: default
 <div class="container">
 
   <h2 class="page-title">
-    Get involved
+    Get involved!
     <hr>
   </h2>
 
   <p>
-  	To keep up with the fellowship, <a href="/blog">read our blog</a> or sign up for our email list:
+  	We recently successfully finished the first summer of the fellowship. To keep up with our current work and to get 
+  	involved next year, <a href="/blog">read our blog</a> and sign up for our email list:
   </p>
   <div class="row">
     <div class="span4 offset4">
@@ -22,7 +23,7 @@ layout: default
   </div>
   <br><br><br>
   <p>
-  	The summer fellowship is just the beginning. We're looking for data science for social good projects, talent, and funding for the fall and beyond.
+  	We're looking for data science for social good projects, talent, and funding for the fall and next summer
   </p> 
   <p>
   		Here's how you can get involved:
@@ -33,28 +34,24 @@ layout: default
   		<h3>Fellows</h3>
   		<img src="/img/icons/flat-ui-color/Bulb@2x.png" alt="Fellows">
   		<p>Want to come to Chicago to tackle social problems with your analytical, data, and coding skills?</p>
-  		<p>Great! There's always next year.</p>
   		<a href="mailto:datascifellows@gmail.com?subject=[Fellows]" class="btn btn-huge btn-info btn-block btn-embossed">Contact Us</a>
   	</div>
   	<div class="span4 alert">
   		<h3>Mentors</h3>
   		<img src="/img/icons/flat-ui-color/Compas@2x.png" alt="Mentors">
   		<p>Want to mentor and lead fellows on challenging and rewarding projects?</p>
-  		<p>We're looking for talent for the fall and beyond.</p>
   		<a href="mailto:datascifellows@gmail.com?subject=[Mentors]" class="btn btn-huge btn-info btn-block btn-embossed">Contact Us</a>
   	</div>
   	<div class="span4 offset1 alert">
   		<h3>Funders</h3>
   		<img src="/img/icons/flat-ui-color/Spaceship@2x.png" alt="Funders">
   		<p>Passionate about using data to improve the world? Want to help pioneer data science for social good?</p>
-  		<p>We've got lots more in store. Let's talk.</p>
   		<a href="mailto:datascifellows@gmail.com?subject=[Funders]" class="btn btn-huge btn-info btn-block btn-embossed">Contact Us</a>
   	</div>
   	<div class="span4 alert">
   		<h3>Partners</h3>
   		<img src="/img/icons/flat-ui-color/Graph@2x.png" alt="Partners">
-  		<p>Are you a government or nonprofit with a problem and lots of data that you can share with us?</p>
-  		<p>We're always looking for projects.</p>
+  		<p>Are you a government or nonprofit with a problem that can use our help?</p>
   		<a href="mailto:datascifellows@gmail.com?subject=[Partners]" class="btn btn-huge btn-info btn-block btn-embossed">Contact Us</a>
   	</div>
   </div>
