--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@ layout: default
   </h2>
 
   <p>
-  	We recently successfully finished the first summer of the fellowship. To keep up with our current work and to get 
+  	We recently successfully finished the first summer of the fellowship.</p><p>To keep up with our current work and to get 
   	involved next year, <a href="/blog">read our blog</a> and sign up for our email list:
   </p>
   <div class="row">
