--- a/index.html
+++ b/index.html
@@ -9,25 +9,14 @@ layout: default
     <img id="logo" src="img/logo.png">
     <p>The Eric & Wendy Schmidt</p>
      Data Science for Social Good
-    <p>Summer Fellowship 2013</p>
+    <p>Summer Fellowship</p>
   </h1>
 
   <div id="partners" class="row">
     <div class="span2">
       <img id="uofc" src="/img/partners/uofc.jpg">
     </div>
-    <div class="span2">
-      <img id="ci" src="/img/partners/ci.png">
-    </div>
-    <div class="span2">
-      <img id="harris" src="/img/partners/harris.png">
-    </div>
-    <div class="span2">
-      <img id="urbanccd" src="/img/partners/urbanccd.png">
-    </div>
-    <div class="span2">
-      <img id="argonne" src="/img/partners/argonne.jpg">
-    </div>
+   
   </div>
 
 </div>
@@ -35,7 +24,7 @@ layout: default
 <div class="dialog dialog-success">
   <div class="container">
     <h2 id="slogan" class="lead">
-      We’re training data scientists to tackle the problems that really matter.
+      We’re training data scientists to tackle problems that really matter.
     </h2>
   </div>
 </div>
