--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@ layout: default
     <p>The Eric & Wendy Schmidt</p>
      Data Science for Social Good
     <p>Summer Fellowship</p>
+     <img id="logo" src="/img/partners/uofc.jpg">
   </h1>
 
-  <div id="partners" class="row">
-    <div class="span2">
-      <img id="uofc" src="/img/partners/uofc.jpg">
-    </div>
-   
-  </div>
 
 </div>
 
