--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ layout: default
         The Eric & Wendy Schmidt Data Science for Social Good fellowship is a <a href="http://www.uchicago.edu/">University of Chicago</a> summer program for aspiring data scientists to work on data mining, machine learning, big data, and data science projects with social impact.
       </p>
       <p>
-        Working closely with governments and nonprofits, fellows will take on <strong>real-world problems</strong> in education, health, energy, transportation, and more.
+        Working closely with governments and nonprofits, fellows take on <strong>real-world problems</strong> in education, health, energy, transportation, and more.
       </p>
       <p>
-        For <strong>three months in Chicago</strong> they’ll apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry, academia, and the Obama campaign.
+        For <strong>three months in Chicago</strong> they apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry, academia, and the Obama campaign.
       </p>
     </div>
   </div>
