--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ layout: default
   </div>
 
   <div class="row section people-spacing">
-    <h3>Our Fellows</h3>
+    <h3>2013 Fellows</h3>
     <hr>
     <p>We're bringing thirty six aspiring data scientists from across the country to Chicago. They're graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p> 
     <p>From June to September, they'll work in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows will work on high impact problems, analyze dozens of datasets, and learn from decision-makers on the front lines of public policy.</p> 
@@ -195,7 +195,7 @@ layout: default
   </div>
 
   <div class="row section people-spacing">
-      <h3>Our Mentors</h3>
+      <h3>2013 Mentors</h3>
       <hr>
       <p>
         Our mentors are experienced data scientists and researchers from business, academia, and nonprofits. They'll work with fellow teams full-time this summer. They'll help fellows brainstorm projects, apply their coding and quantitative skills, and work with partner organizations. 
@@ -226,7 +226,7 @@ layout: default
     </div>
 
      <div class="row section people-spacing">
-      <h3>Our Volunteer Mentors</h3>
+      <h3>Our 2013 Volunteer Mentors</h3>
       <hr>
       <p>
         Professional data scientists, web developers, and researchers from Chicago's data community and beyond. They're sharing their skills and expertise with the fellows part-time. 
