--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@ layout: default
 
   <p>
   	We recently successfully finished the first summer of the fellowship.</p><p>To keep up with our current work and to get 
-  	involved next year, <a href="/blog">read our blog</a> and sign up for our email list:
+  	involved next year, sign up for our email list and contact us:
   </p>
   <div class="row">
     <div class="span4 offset4">
@@ -22,9 +22,9 @@ layout: default
     </div>
   </div>
   <br><br><br>
-  <p>
+  <h3>
   	We're looking for data science for social good projects, talent, and funding for the fall and next summer
-  </p> 
+  </h3> 
   <p>
   		Here's how you can get involved:
   </p>
