--- a/contact/index.html
+++ b/contact/index.html
@@ -22,9 +22,9 @@ layout: default
     </div>
   </div>
   <br><br><br>
-  <h3>
-  	We're looking for data science for social good projects, talent, and funding for the fall and next summer
-  </h3> 
+  <h4>
+  	We're looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
+  </h4> 
   <p>
   		Here's how you can get involved:
   </p>
