--- a/contact/index.html
+++ b/contact/index.html
@@ -9,10 +9,10 @@ layout: default
     <hr>
   </h2>
 
-  <p>
-  	We recently successfully finished the first summer of the fellowship.</p><p>To keep up with our current work and to get 
-  	involved next year, sign up for our email list and contact us:
-  </p>
+  <h4>
+  	You can get involved now or for the 2014 fellowship. 
+  	We're looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
+  </h4> 
   <div class="row">
     <div class="span4 offset4">
       <a href="http://eepurl.com/zNWrT" class="btn btn-huge btn-success btn-block btn-embossed">
@@ -22,9 +22,7 @@ layout: default
     </div>
   </div>
   <br><br><br>
-  <h4>
-  	We're looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
-  </h4> 
+  
   <p>
   		Here's how you can get involved:
   </p>
