--- a/contact/index.html
+++ b/contact/index.html
@@ -10,8 +10,7 @@ layout: default
   </h2>
 
   <h4>
-  	You can get involved now or for the 2014 fellowship. 
-  	We're looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
+  	We're already getting ready for the 2014 program and looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
   </h4> 
   <div class="row">
     <div class="span4 offset4">
