added final fellows to people page

--- a/people/index.html
+++ b/people/index.html
@@ -90,6 +90,12 @@ layout: default
       </div>
     </div>
     <div class="span2">
+      <img src="/img/people/castelle.jpg" alt="Michael Castelle">
+      <h6>Michael Castelle</h6>
+      <p>Sociology</p>
+      <p>University of Chicago</p>
+    </div>
+    <div class="span2">
       <img src="/img/people/cavaggion.jpg" alt="Giorgio Cavaggion">
       <h6>Giorgio Cavaggion</h6>
       <p>Computer Science</p>
@@ -220,6 +226,12 @@ layout: default
       </div>
     </div>
     <div class="span2">
+      <img src="/img/people/panella.jpg" alt="Alessandro Panella">
+      <h6>Alessandro Panella</h6>
+      <p>Computer Science</p>
+      <p>University of Illinois at Chicago</p>
+    </div>
+    <div class="span2">
       <img src="/img/people/qamar.jpg" alt="Ahmad Qamar">
       <h6>Ahmad Qamar</h6>
       <p>Physics, Math</p>
@@ -230,6 +242,12 @@ layout: default
       <h6>Emily Rowe</h6>
       <p>Public Policy</p>
       <p>University of Chicago</p>
+    </div>
+    <div class="span2">
+      <img src="/img/people/seeskin.jpg" alt="Zach Seeskin">
+      <h6>Zach Seeskin</h6>
+      <p>Statistics</p>
+      <p>Northwestern University</p>
     </div>
     <div class="span2">
       <img src="/img/people/shah.jpg" alt="Nihar Shah">
