--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container">
 
   <h1 class="headline">
-    <img id="logo" src="img/logo.png">
+    <!-- <img id="logo" src="img/logo.png">-->
     <p>The Eric & Wendy Schmidt</p>
      Data Science for Social Good
     <p>Summer Fellowship</p>
@@ -15,6 +15,7 @@ layout: default
 
 
 </div>
+<iframe width="420" height="315" src="//www.youtube.com/embed/V_ndznCKjg4?rel=0" frameborder="0" allowfullscreen></iframe>
 
 <div class="dialog dialog-success">
   <div class="container">
