--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ layout: default
 
 
 </div>
-<iframe width="420" height="315" src="//www.youtube.com/embed/V_ndznCKjg4?rel=0" frameborder="0" allowfullscreen></iframe>
-
+<center>
+<iframe width="480" height="360" src="//www.youtube.com/embed/V_ndznCKjg4?rel=0" frameborder="0" allowfullscreen></iframe>
+</center>
 <div class="dialog dialog-success">
   <div class="container">
     <h2 id="slogan" class="lead">
