--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container">
 
   <h1 class="headline">
-    <!-- <img id="logo" src="img/logo.png">-->
+    <img id="logo" src="img/logo.png">
     <p>The Eric & Wendy Schmidt</p>
      Data Science for Social Good
     <p>Summer Fellowship</p>
