--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@ layout: default
     <h2 id="slogan" class="lead">
       We’re training data scientists to tackle problems that really matter.
     </h2>
+    <div class="span3">
+          <a href="/blog/" class="btn btn-huge btn-block btn-embossed btn-danger">
+            Apply to be a Fellow
+          </a>
+        </div>
   </div>
 </div>
 
