--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ layout: default
           <a href="/blog/" class="btn btn-huge btn-block btn-embossed btn-danger">
             Apply to be a Fellow
           </a>
+          <a href="/blog/" class="btn btn-huge btn-block btn-embossed btn-danger">
+            Apply to be a Mentor
+          </a>
+          <a href="/blog/" class="btn btn-huge btn-block btn-embossed btn-danger">
+            Apply to be a Project Partner
+          </a>
         </div>
   </div>
 </div>
