--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
       We’re training data scientists to tackle problems that really matter.
     </h2>
     <p></p>
-    <div class="span3">
+   <div class="row demo-row">
          <center><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
             Apply to be a Fellow
           </a>
