--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <p>The Eric & Wendy Schmidt</p>
      Data Science for Social Good
     <p>Summer Fellowship</p>
-     <img id="logo" src="/img/partners/uofc.jpg">
+     <img id="logo" src="/img/partners/uofc-new.jpg">
   </h1>
 
 
