--- a/index.html
+++ b/index.html
@@ -79,201 +79,7 @@ layout: default
         </div>
     </div>
 
-  <div id="partners" class="row section">
-    <h3>Our Project Partners</h3>
-    <hr>
-    <div class="span3">
-      <a href="http://www.cityofchicago.org">
-          <img id="city-logo" src="/img/partners/city_small.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://transitchicago.com/">
-          <img id="cta-logo" src="/img/partners/cta_small.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.chicagopolice.org">
-          <img id="cpd-logo" src="/img/partners/cpd_small.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.cookcountygov.com/">
-          <img id="county-logo" src="/img/partners/cookcounty_small.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.cityofchicago.org/city/en/depts/cdot.html">
-          <img id="cdot-logo" src="/img/partners/cdot.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.divvybikes.com/">
-          <img id="divvy-logo" src="/img/partners/divvy.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.cookcountylandbank.org/">
-        <img id="landbank-logo" src="/img/partners/landbank.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.housingstudies.org/">
-        <img id="ihs-logo" src="/img/partners/ihs.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://ushahidi.com/">
-        <img id="ushahidi-logo" src="/img/partners/ushahidi.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://qcri.org.qa/">
-        <img id="qcri-logo" src="/img/partners/qcri.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.lbl.gov">
-        <img id="lbnl-logo" src="/img/partners/lbnl_small.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.edf.org/">
-        <img id="edf-logo" src="/img/partners/edf.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.northshore.org/">
-        <img id="northshore-logo" src="/img/partners/northshore.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.nursefamilypartnership.org">
-        <img id="nfp-logo" src="/img/partners/nfp.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.cookcountysheriff.com/">
-        <img id="sheriff-logo" src="/img/partners/sheriff.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://www.chapinhall.org">
-        <img id="chapin-logo" src="/img/partners/chapin.jpg">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://crimelab.uchicago.edu">
-        <img id="crimelab-logo" src="/img/partners/crimelab.jpg">
-      </a>
-    </div>
-    <div class="span3">    
-      <a href="http://www.datakind.org">
-        <img id="datakind" src="/img/partners/datakind.png">
-      </a>
-    </div>
-    <div class="span3">
-      <a href="http://aws.amazon.com/">
-        <img id="aws-logo" src="/img/partners/aws.png">
-      </a>
-    </div>
-  </div>
-
-  <div class="row section people-spacing">
-    <h3>2013 Fellows</h3>
-    <hr>
-    <p>We're bringing thirty six aspiring data scientists from across the country to Chicago. They're graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p> 
-    <p>From June to September, they'll work in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows will work on high impact problems, analyze dozens of datasets, and learn from decision-makers on the front lines of public policy.</p> 
-    <br>
-    <div class="people">
-      <div class="span2">
-        <img src="/img/people/cheung.jpg" alt="Kyla Cheung">
-        <h6>Kyla Cheung</h6>
-        <p>Computer Science</p>
-        <p>Columbia University</p>
-      </div>
-      <div class="span2">
-        <img src="/img/people/brown.jpg" alt="Christopher Brown">
-        <h6>Christopher Brown</h6>
-        <p>Linguistics</p>
-        <p>UT Austin</p>
-      </div>
-      <div class="span2">
-        <img src="/img/people/bashyakarla.jpg" alt="Varoon Bashyakarla">
-        <h6>Varoon Bashyakarla</h6>
-        <p>Statistics, Economics</p>
-        <p>Yale University</p>
-      </div>
-      <div class="span3">
-        <a href="/people/" class="btn btn-huge btn-block btn-embossed btn-info">
-          Meet our Fellows →
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="row section people-spacing">
-      <h3>2013 Mentors</h3>
-      <hr>
-      <p>
-        Our mentors are experienced data scientists and researchers from business, academia, and nonprofits. They'll work with fellow teams full-time this summer. They'll help fellows brainstorm projects, apply their coding and quantitative skills, and work with partner organizations. 
-      </p>
-      <br>
-      <div class="people">
-        <div class="span2">
-          <img src="/img/people/mader.jpg" alt="Nick Mader">
-          <h6>Nick Mader</h6>
-          <p>Economist PhD at Chapin Hall at the University of Chicago</p>
-        </div>
-        <div class="span2">
-          <img src="/img/people/eneva.jpg" alt="Elena Eneva">
-          <h6>Elena Eneva</h6>
-          <p>Machine learning expert at Accenture</p>
-        </div>
-        <div class="span2">
-          <img src="/img/people/plagge.jpg" alt="Tom Plagge">
-          <h6>Tom Plagge</h6>
-          <p>Astrophysicist PhD turned data scientist</p>
-        </div>
-        <div class="span3">
-          <a href="/people/#mentors" class="btn btn-huge btn-block btn-embossed btn-success">
-            Meet our Mentors →
-          </a>
-        </div>
-      </div>
-    </div>
-
-     <div class="row section people-spacing">
-      <h3>Our 2013 Volunteer Mentors</h3>
-      <hr>
-      <p>
-        Professional data scientists, web developers, and researchers from Chicago's data community and beyond. They're sharing their skills and expertise with the fellows part-time. 
-      </p>
-      <br>
-      <div class="people">
-        <div class="span2">
-          <img src="/img/people/shron.jpg" alt="Max Shron">
-          <h6>Max Shron</h6>
-          <p><a href="http://shron.net/">Data strategist</a> based in New York City, former data scientist at OkCupid</p>
-        </div>
-        <div class="span2">
-          <img src="/img/people/gregg.jpg" alt="Forest Gregg">
-          <h6>Forest Gregg</h6>
-          <p>Sociology PhD student at the University of Chicago</p>
-        </div>
-        <div class="span2">
-          <img src="/img/people/malmgren.png" alt="Dean Malmgren">
-          <h6>Dean Malmgren</h6>
-          <p>Data scientist at <a href='http://datascopeanalytics.com/'>Datascope Analytics</a></p>
-        </div>
-        <div class="span3">
-          <a href="/people/#volunteer-mentors" class="btn btn-huge btn-block btn-embossed btn-warning">
-            Meet our Volunteer Mentors →
-          </a>
-        </div>
-      </div>
-    </div>
-
+  
      <div class="section row people-spacing">
       <h3>Staff</h3>
       <hr>
@@ -285,7 +91,7 @@ layout: default
         <div class="span4">
           <img src="/img/people/ghanig.jpg" alt="Rayid Ghani">
           <h6>Rayid Ghani</h6>
-          <p>Currently at University of Chicago, former Chief scientist of 2012 Obama campaign</p>
+          <p>Currently at University of Chicago, former Chief Scientist of 2012 Obama campaign</p>
           <div class="icons">
             <a href="http://www.twitter.com/rayidghani"><i class="ss-twitter"></i></a>
             <a href="https://www.github.com/rayidghani"><i class="ss-octocat"></i></a>
