--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ layout: default
       <p>
         For <strong>three months in Chicago</strong> they apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry, academia, and the Obama campaign.
       </p>
+      <p>The 2013 program brought thirty six aspiring data scientists from across the country to Chicago. They were graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
+      <p>From June to September, they worked in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows worked on high impact problems, analyzed dozens of datasets, and learned from decision-makers on the front lines of public policy.</p> 
     </div>
   </div>
 
