--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ layout: default
       </p>
       <p>The 2013 program brought thirty six aspiring data scientists from across the country to Chicago. They were graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
       <p>From June to September, they worked in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows worked on high impact problems, analyzed dozens of datasets, and learned from decision-makers on the front lines of public policy.</p> 
+    <p>Each team was led by full-time mentors who served as project leaders, techincal advisors, helped the fellows brainstorm ideas, and managed the relationship between the team of fellows and the project partners. 
     </div>
   </div>
 
