--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ layout: default
   </div>
 
   <div id="News" class="row section">
-        <h3>Blog</h3>
+        <h3>News</h3>
         <hr>
         <p>Read our <a href="/blog">blog</a> to follow the fellowship and learn about our projects.
         {% for post in site.posts limit:10 %}
