--- a/contact/index.html
+++ b/contact/index.html
@@ -60,5 +60,14 @@ layout: default
   	  
   	</div>
   </div>
+   <p></p>
+  <div class="row">
+    <div class="span4 offset4">
+      <a href="mailto:datasciencefellowship@ci.uchicago.edu" class="btn btn-huge btn-success btn-block btn-embossed">
+        <i class="fui-mail"></i>
+        Email us if you have questions
+      </a>        
+    </div>
+  </div>
 </div>
 
