--- a/media/index.html
+++ b/media/index.html
@@ -22,6 +22,8 @@ These Data Science Mercenaries Will Make The World A Better Place</a>
 . The Atlantic - May 8, 2013</p>
 <p><a href="http://citybizchicago.curatasite.com/articles/share/98987/">Fellows seek to unleash the power of ‘good’ — with data</a>
 . WBEZ - August 21, 2013</p>
-<p><a herf="http://www.technologyreview.com/news/514406/data-won-the-us-election-now-can-it-save-the-world/">Data Won the U.S. Election. Now Can It Save the World?</a></p>
-. MIT Tech Review - May 29, 2013</div>
+<p><a herf="http://www.technologyreview.com/news/514406/data-won-the-us-election-now-can-it-save-the-world/">Data Won the U.S. Election. Now Can It Save the World?</a>
+. MIT Tech Review - May 29, 2013</p>
+  
+</div>
 
