--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -7,11 +7,17 @@ layout: default
 <div class="dialog dialog-success">
   <div class="container">
     <p></p>
-    <h2 id="slogan" class="lead">
-      FAQs for Applicants interested in becoming Summer Fellows
-    </h2>
+    <h3>FAQs for Applicants interested in becoming Summer Fellows
+    </h3>
     <p></p>
       </div>
+<div class="offset2 span8">
+<p><strong>When does the fellowship start and finish?</strong></p>
+<p>We'll start end of May and finish end of August. We're working on figuring out multiple start dates that acn accomodate different end of quarter/semester dates</p>
+<p><strong>When does the fellowship start and finish?</strong></p>
+<p>We'll start end of May and finish end of August. We're working on figuring out multiple start dates that acn accomodate different end of quarter/semester dates</p>
+<p><strong>When does the fellowship start and finish?</strong></p>
+<p>We'll start end of May and finish end of August. We're working on figuring out multiple start dates that acn accomodate different end of quarter/semester dates</p>
     </div>
   
   </div>
