--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -10,9 +10,9 @@ layout: default
   <div class="container">
     <p></p>
     <div class="row demo-row">
-    <div class="span3"><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
+    <div class="span3"><center><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
             Apply to be a Summer Fellow
-          </a>
+          </a></center>
           </div>
           </div>
           <p></p>
