--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -10,10 +10,10 @@ layout: default
   <div class="container">
     <p></p>
     <div class="row demo-row">
-    <div class="span3"><center><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
+    <center><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
             Apply to be a Summer Fellow
           </a></center>
-          </div>
+         
           </div>
           <p></p>
      
