--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -27,6 +27,11 @@ layout: default
 by February 1, 2013 and make sure your references also fill out the <a href="http://datascience.wufoo.com/forms/recommendation-form-2014-summer-fellowship/">
 recommendation form</a></p>
 
+
+<p><strong>What kind of fellows are you looking for?</strong></p>
+<p>We're looking for strong graduate (and advanced undergraduate) students with computational, quantitative, and analytics skills who care about making a social impact. Last year's fellows included people with Computer Science, Machine Learning, Statistics, Economics, Applied Math, Physics, Linguistics, Sociology, and Public Policy degrees</p>
+
+
 <p><strong>When does the fellowship start and finish?</strong></p>
 <p>We'll start end of May and finish end of August. We're working on figuring out multiple start dates that can accomodate different end of quarter/semester dates</p>
 
@@ -36,6 +41,17 @@ recommendation form</a></p>
 <p><strong>Do I have to be a student to apply?</strong></p>
 <p>Not neccesarily but this is designed for current student or recent graduates.
 If you have finished a degree (undergrad, Masters, Phd) in the past couple of years, you should be ok to apply.</p>
+
+<p><strong>When do I hear back from the fellowship?</strong></p>
+<p>We'll review applications starting February 1 and will schedule interviews after we go through a round of reviewing. Final decisions will be sent out by March 15.
+</p>
+
+<p><strong>What projects am I going to be working on?</strong></p>
+<p>Call for Projects is still on-going. You can see projects from last year <a href="projects/">here</a>. Projects will be in partnership with government and non profit organizations and will be in areas of 
+ education, healthcare, energy, community development, disaster relief, and public safety. We'll send out a specific list of projects with our decision by March 15.
+</p>
+
+
 
 
     </div>
