--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -6,7 +6,7 @@ layout: default
  <h3 class="headline">
     
     <p></p><p></p>
-    <p>FAQs for Applicants interested in becoming Summer Fellows</p>
+    FAQs for Applicants interested in becoming Summer Fellows
      
   </h3>
   
