--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -2,16 +2,13 @@
 published: true
 layout: default
 ---
- <div class="container">
- <h5 class="headline">
-    
-    <p></p><p></p>
-    FAQs for Applicants interested in becoming Summer Fellows
-     
-  </h5>
+
   
-   </div>
-  <div class="container">
+   <h2 class="page-title">
+    FAQs for Applicants interested in becoming Summer Fellows
+    <hr>
+  </h2>   
+  
     <p></p>
     <div class="row demo-row">
     <center><a href="http://datascience.wufoo.com/forms/2014-summer-fellowship-application/" class="btn btn-huge btn-block btn-embossed btn-danger">
