--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -3,9 +3,9 @@ published: true
 layout: default
 ---
 
-  
+  <div class="container">
    <h2 class="page-title">
-    FAQs for Applicants interested in becoming Summer Fellows
+    FAQs for Summer Fellowship Applicants
     <hr>
   </h2>   
   
