--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
   <div class="container">
-   <h2 class="page-title">
+   <h2 class="page-title" align="center">
     FAQs for Summer Fellowship Applicants
     <hr>
   </h2>   
