--- a/faq-mentors.html
+++ b/faq-mentors.html
@@ -26,7 +26,7 @@ by February 1, 2013</a></p>
 
 <p><strong>What kind of mentors are you looking for?</strong></p>
 <p>We're looking for data scientists with strong technical skills and practical experience with an interest in mentoring students learn real-world skills and make a social impact.
-Last year, we had a mix of people from Industry and Academia (Researchers, Post-Docs, Faculty) as mentors. . Last year's mentors included people with Computer Science, Machine Learning, Statistics, Economics, Applied Math and Physics backgrounds</p>
+Last year, we had a mix of people from Industry and Academia (Researchers, Post-Docs, Faculty) as mentors with Computer Science, Machine Learning, Statistics, Economics, Applied Math and Physics backgrounds</p>
 
 
 <p><strong>When does the fellowship start and finish?</strong></p>
