--- a/faq-mentors.html
+++ b/faq-mentors.html
@@ -26,18 +26,18 @@ by February 1, 2013</a></p>
 
 <p><strong>What kind of mentors are you looking for?</strong></p>
 <p>We're looking for data scientists with strong technical skills and practical experience with an interest in mentoring students learn real-world skills and make a social impact.
-Last year, we had a mix of people from Industry and Academia (Researchers, Post-Docs, Faculty) as mentors with Computer Science, Machine Learning, Statistics, Economics, Applied Math and Physics backgrounds</p>
+Last year, we had a mix of people from Industry and Academia (with practical, real-world experience) as mentors with Computer Science, Machine Learning, Statistics, Economics, Applied Math and Physics backgrounds</p>
 
+<p><strong>Is it a full-time program and do I have to be in Chicago?</strong></p>
+<p>Yes, we are looking for full-time mentors who can work with our team of fellows for the summer in Chicago. While we are grateful for part-time, volunteer help if you really want to help us, we are in need to dedicated, full-time, experienced mentors who can spend the entire summer in Chicago with our team of fellows.
+</p>
 
 <p><strong>When does the fellowship start and finish?</strong></p>
 <p>We'll start end of May and finish end of August. We're working on figuring out multiple start dates that can accomodate different end of quarter/semester dates</p>
 
-<p><strong>Is it a full-time program and do I have to be in Chicago?</strong></p>
-<p>Yes, we are looking for full-time mentors who can work with our team of fellows for the summer in Chicago. We always welcome part-time volunteer help but our priority is full-time mentors.
-</p>
 
 <p><strong>What if i can only help part-time?</strong></p>
-<p>You should still email us and/or apply. We can use your help but we really need good, full-time mentors.
+<p>You should still email us and/or apply. We'll keep you informed on how we can use your help but we really need good, full-time mentors.
 </p>
 
 <p><strong>Do I get paid?</strong></p>
