Updated media page

--- a/media/index.html
+++ b/media/index.html
@@ -24,6 +24,8 @@ These Data Science Mercenaries Will Make The World A Better Place</a>
 . WBEZ - August 21, 2013</p>
 <p><a herf="http://www.technologyreview.com/news/514406/data-won-the-us-election-now-can-it-save-the-world/">Data Won the U.S. Election. Now Can It Save the World?</a>
 . MIT Tech Review - May 29, 2013</p>
+<p><a herf="http://adage.com/article/dataworks/obama-s-data-scientist-runs-social-good-program/240902/">Obama's Data Scientist Runs Social Good Program</a>
+. Ad Age - April 16, 2013</p>
   
 </div>
 
