Chronologically ordered media clips

--- a/media/index.html
+++ b/media/index.html
@@ -32,6 +32,12 @@ These Data Science Mercenaries Will Make The World A Better Place</a>
 . Crain's Chicago Business - July 18, 2013</p>
 <p><a href="http://datasmart.ash.harvard.edu/news/article/taking-on-social-problems-with-analytics-273">Taking on Social Problems With Analytics</a>
 . Data-Smart City Solutions - July 23, 2013</p>
+<p><a href="http://www.greentechmedia.com/articles/read/New-Data-Project-Seeks-to-Raise-Investor-Confidence-in-Energy-Efficiency">New Data Project Seeks to Raise Investor Confidence in Energy Efficiency</a>
+. Green Tech Media - July 30, 2013</p>
+<p><a href="http://www.builtinchicago.org/blog/uchicago-fellows-harness-data-solve-social-problems">UChicago Fellows Harness Data to Solve Social Problems</a>
+. BuiltIn Chicago - August 22, 2013</p>
+<p><a href="http://www.uchicago.edu/features/tackling_citys_challenges_with_data/">Tackling City Challenges with Data</a>
+. UChicago News - September 9, 2013</p>
   
 </div>
 
