--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -35,6 +35,10 @@ recommendation form</a></p>
 <p><strong>Is it a full-time program and do I have to be in Chicago?</strong></p>
 <p>Yes. And Yes.</p>
 
+<p><strong>Is it a paid fellowship and do you provide housing?</strong></p>
+<p>Yes, we provide stipends based on your degree that are comparable to internship programs. Hosuing is also provided for the summer.</p>
+
+
 <p><strong>Do I have to be a student to apply?</strong></p>
 <p>Not neccesarily but this is designed for current student or recent graduates.
 If you have finished a degree (undergrad, Masters, Phd) in the past couple of years, you should be ok to apply.</p>
