--- a/faq-fellows.html
+++ b/faq-fellows.html
@@ -36,7 +36,7 @@ recommendation form</a></p>
 <p>Yes. And Yes.</p>
 
 <p><strong>Is it a paid fellowship and do you provide housing?</strong></p>
-<p>Yes, we provide stipends based on your degree that are comparable to internship programs. Hosuing is also provided for the summer.</p>
+<p>Yes, we provide stipends based on your degree that are comparable to internship programs. Housing is also provided for the summer.</p>
 
 
 <p><strong>Do I have to be a student to apply?</strong></p>
