--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ layout: default
           <img src="/img/people/gee.jpg" alt="Matt Gee">
           <h6>Matt Gee</h6>
           <p>
-            Policy PhD student at the University of Chicago, former analyst at U.S. Treasury
+            Research Fellow at the Urban Center for Computation and Data
           </p>
           <div class="icons">
             <a href="http://www.twitter.com/matthewgee"><i class="ss-twitter"></i></a>
