--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ layout: default
       <p>
         For <strong>three months in Chicago</strong> they apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry, academia, and the Obama campaign.
       </p>
-      <p>The 2013 program brought thirty six aspiring data scientists from across the country to Chicago. They were graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
-      <p>From June to September, they worked in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows worked on high impact problems, analyzed dozens of datasets, and learned from decision-makers on the front lines of public policy.</p> 
-    <p>Each team was led by full-time mentors who served as project leaders, techincal advisors, helped the fellows brainstorm ideas, and managed the relationship between the team of fellows and the project partners. 
+      <p>The 2014 program will bring aspiring data scientists from across the country to Chicago. They are graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
+      <p>From June to September, they will work in small teams on an analytics project in partnership with nonprofits, local governments, or federal agencies. Fellows will work on high impact problems, analyzing dozens of datasets, and learning from decision-makers on the front lines of public policy.</p> 
+    <p>Each team is led by full-time mentors who will serve as project leaders, techincal advisors, helping the fellows brainstorm ideas, and manage the relationship between the team of fellows and the project partners. 
     </div>
   </div>
 
@@ -121,12 +121,10 @@ layout: default
           </div>
         </div>
         <div class="span4">
-          <img src="/img/people/velez.jpg" alt="Juan-Pablo Velez">
-          <h6>Juan-Pablo Velez</h6>
-          <p>Civic technologist with Open City, former data journalist</p>
+          <img src="/img/people/plagge.jpg" alt="Tom Plagge">
+          <h6>Tom Plagge</h6>
+          <p>Researcher at Computation Institute</p>
           <div class="icons">
-            <a href="http://www.twitter.com/jpvelez"><i class="ss-twitter"></i></a>
-            <a href="https://www.github.com/jpvelez"><i class="ss-octocat"></i></a>
           </div>
         </div>
         <div class="span4">
