--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ layout: default
            
          </div>
        <div class="span3">Deadline: January 10, 2014</div>
-     </div>    
+     </div>   
+     Application deadlines for the 2014 Summer Program are over but feel free to get in touch with us if you have an interesting proposal.
         
   </div>
 </div>
