--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ layout: default
          </div>
        <div class="span3">Deadline: January 10, 2014</div>
      </div>   
-     Application deadlines for the 2014 Summer Program are over but feel free to get in touch with us if you have an interesting proposal.
+     Application deadlines for the 2014 Summer Program are over but feel free to <a href="mailto:datascifellows@gmail.com">get in touch with us</a>.
         
   </div>
 </div>
